feat: update address mapping, SKU generation, JWT properties, and CORS configuration